prepared the bar chart

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your HTML goes here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Top 10 Reasons for 311 Calls</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <svg id="chart"></svg>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="java.js"></script>
+</body>
+</html>
